
if(EXISTS "${PROJECT_SOURCE_DIR}/../ethercat/")
set(ETHERCAT_DIR ${PROJECT_SOURCE_DIR}/../ethercat)


# INCLUDE_DIRECTORIES(${ETHERCAT_DIR})
# INCLUDE_DIRECTORIES(${ETHERCAT_DIR}/tool)
# INCLUDE_DIRECTORIES(${ETHERCAT_DIR}/include)
# INCLUDE_DIRECTORIES(${ETHERCAT_DIR}/master)
# INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
# LINK_DIRECTORIES(${ETHERCAT_DIR}/lib/.libs)
# LINK_DIRECTORIES("LIBXML2_LIBRARIES")


# add_subdirectory(ethercat_tool)
# add_subdirectory(iod_interpreter)
# add_subdirectory(iod_sdo_interpreter)
#
# add_subdirectory(iod)
# add_subdirectory(iod_sdo)

endif()
